@@ -56,8 +56,8 @@ Disable sending commands to remote shells. If the command would have no effect, 
 \fB:enable [SHELLS...]\fR
 Enable sending commands to remote shells. If the command would have no effect, it changes all other shells to the inverse enable value. That is, if you enable only already enabled shells, it will first disable all other shells. The special characters * ? and [] work as expected.
 .TP
-\fB:export_rank\fR
-Set GSH_RANK and GSH_NR_SHELLS on enabled remote shells. The GSH_RANK shell variable uniquely identifies each shell with a number between 0 and GSH_NR_SHELLS - 1. GSH_NR_SHELLS is the total number of enabled shells.
+\fB:export_vars\fR
+Export some environment variables on enabled remote shells. GSH_NR_SHELLS is the total number of enabled shells. GSH_RANK uniquely identifies each shell with a number between 0 and GSH_NR_SHELLS - 1. GSH_NAME is the hostname as specified on the command line and GSH_DISPLAY_NAME the hostname as displayed by :list (most of the time the same as GSH_NAME).
 .TP
 \fB:help [COMMAND]\fR
 List control commands or show their documentations.
