@@ -63,7 +63,7 @@ class TestFileTransfer(unittest.TestCase):
         child.expect('ready \(5\)> ')
         child.sendline('!cd %s && sha1sum file > SHA1SUM' % local)
         child.expect('ready \(5\)> ')
-        child.sendline(':export_rank')
+        child.sendline(':export_vars')
         child.expect('ready \(5\)> ')
         child.sendline('mkdir $GSH_RANK')
         child.expect('ready \(5\)> ')
@@ -100,7 +100,7 @@ class TestFileTransfer(unittest.TestCase):
         child.expect('ready \(5\)> ')
         child.sendline('!cd %s && sha1sum file > SHA1SUM' % local)
         child.expect('ready \(5\)> ')
-        child.sendline(':export_rank')
+        child.sendline(':export_vars')
         child.expect('ready \(5\)> ')
         child.sendline('mkdir $GSH_RANK')
         child.expect('ready \(5\)> ')
